examples/negative/doc/second_module_doc.kai
# Negative fixture (#681): two module-position `#[doc(...)]` in one
# file. Only one module doc is allowed; the error points at the second
# occurrence (line 8).

#[doc("""module doc one""")]

#[doc("""module doc two""")]

fn main() : Int = 0
